--- a/app/src/main/res/layout/summary_recycler_row.xml
+++ b/app/src/main/res/layout/summary_recycler_row.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                android:text="" />
+                android:text="@string/user_name_placeholder" />
 
             <TextView
                 android:id="@+id/summaryCardUserValue"
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="" />
+                android:text="@string/home_item_zero" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
