--- a/app/src/main/res/layout/dialog_add_member.xml
+++ b/app/src/main/res/layout/dialog_add_member.xml
@@ -51,16 +51,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addMemberNameInput"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        style="@style/EditTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minWidth="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColorHint="?attr/colorOnPrimary"
-        app:hintTextColor="?attr/colorOnPrimary"
-        app:boxStrokeColor="?attr/colorOnPrimary"
-        app:counterTextColor="?attr/colorOnPrimary"
         app:counterEnabled="true"
         app:counterMaxLength="30"
         >
@@ -68,7 +64,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:textColor="?attr/colorOnPrimary"
-            android:background="?attr/colorSecondary"
+            android:background="@color/ivory"
             android:layout_height="wrap_content"
             android:hint="@string/add_member_dialog_hint" />
     </com.google.android.material.textfield.TextInputLayout>
