--- a/app/src/main/res/layout/dialog_note_detail.xml
+++ b/app/src/main/res/layout/dialog_note_detail.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/dialog_background"
+    android:padding="20dp"
     tools:context=".dialog.NoteDetailDialog">
 
 
@@ -29,6 +30,7 @@
         app:layout_constraintBottom_toTopOf="@id/noteDetailTextInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:paddingBottom="20dp"
         android:textSize="@dimen/medium_text_size"
         android:text="@string/note_detail_title_create" />
@@ -51,7 +53,7 @@
             android:text="@string/note_detail_remove_button" />
 
         <android.widget.Space
-            android:layout_width="40dp"
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
             />
 
@@ -67,6 +69,7 @@
         android:id="@+id/noteDetailTextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/EditTextLayout"
         android:minWidth="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -78,6 +81,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="100dp"
+            android:background="@color/ivory"
+            android:textColor="?attr/colorOnPrimary"
             android:hint="@string/note_detail_note_text" />
     </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
