--- a/app/src/main/res/layout/dialog_add_home.xml
+++ b/app/src/main/res/layout/dialog_add_home.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/dialog_background"
-    android:padding="20dp"
+    android:padding="15dp"
     >
 
     <TextView
@@ -13,21 +13,33 @@
         android:layout_height="wrap_content"
         android:text="@string/add_home_dialog_title"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/addHomeButtonLayout"
+        app:layout_constraintBottom_toTopOf="@id/addHomeDialogHint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="@dimen/medium_text_size"
+        android:layout_marginBottom="5dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addHomeDialogHint"
+        android:text="@string/add_home_dialog_hint"
+        android:textColor="?attr/colorOnPrimary"
+        app:layout_constraintTop_toBottomOf="@id/addHomeDialogTitle"
+        app:layout_constraintBottom_toTopOf="@id/addHomeButtonLayout"
         android:layout_marginBottom="20dp"
         />
+
 
 
     <LinearLayout
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addHomeDialogTitle"
+        app:layout_constraintTop_toBottomOf="@id/addHomeDialogHint"
         android:id="@+id/addHomeButtonLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
