--- a/app/src/main/res/layout/summary_recycler_row.xml
+++ b/app/src/main/res/layout/summary_recycler_row.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/summaryCardUserName"
                 style="@style/Title"
                 android:textSize="@dimen/medium_text_size"
+                android:textColor="?attr/colorOnPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +31,7 @@
                 android:textSize="@dimen/medium_text_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/home_item_zero" />
         </androidx.constraintlayout.widget.ConstraintLayout>
