--- a/app/src/main/res/layout/dialog_home_detail.xml
+++ b/app/src/main/res/layout/dialog_home_detail.xml
@@ -3,19 +3,22 @@
     android:background="@drawable/dialog_background"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp"
+    >
 
     <ImageView
         android:id="@+id/homeDetailPicture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/baseline_home_24"
-        android:padding="60dp"
+        android:padding="40dp"
         android:scaleX="5"
         android:scaleY="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/homeDetailName"
         android:contentDescription="@string/home_detail_icon_desc"
         />
 
@@ -23,25 +26,60 @@
         android:id="@+id/homeDetailName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_text_size"
+        android:textSize="30sp"
         android:textColor="?attr/colorOnPrimary"
         android:textStyle="bold"
+        android:layout_marginBottom="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/homeDetailPicture"
-        app:layout_constraintBottom_toTopOf="@id/removeHomeButton"
+        app:layout_constraintBottom_toTopOf="@id/homeDetailMembersText"
         android:text="@string/home_name_placeholder" />
 
+
+    <View
+        android:id="@+id/nameDivider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?attr/colorPrimaryVariant"
+        app:layout_constraintTop_toBottomOf="@id/homeDetailName"
+        android:layout_marginTop="5dp"
+        />
+
+    <TextView
+        android:id="@+id/homeDetailMembersText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/homeDetailName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/homeDetailMembers"
+        app:layout_constraintBottom_toTopOf="@id/removeHomeButton"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="30dp"
+        android:textColor="?attr/colorOnPrimary"
+        android:text="@string/home_item_members" />
+
+    <TextView
+        android:id="@+id/homeDetailMembers"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="?attr/colorOnPrimary"
+        android:layout_marginStart="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/homeDetailMembersText"
+        app:layout_constraintTop_toTopOf="@id/homeDetailMembersText"
+        app:layout_constraintBottom_toBottomOf="@id/homeDetailMembersText"
+        android:text="@string/user_name_placeholder" />
 
     <ImageButton
         android:id="@+id/addMemberButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_person_add_24"
-        app:layout_constraintTop_toBottomOf="@id/homeDetailName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/removeHomeButton"
+        app:layout_constraintStart_toEndOf="@id/homeDetailName"
+        app:layout_constraintTop_toTopOf="@id/homeDetailName"
+        app:layout_constraintBottom_toBottomOf="@id/homeDetailName"
+        android:layout_marginStart="10dp"
         android:contentDescription="@string/add_members_button" />
 
     <Button
@@ -53,7 +91,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addMemberButton"
-        android:layout_marginBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/homeDetailMembersText"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
