--- a/app/src/main/res/layout/dialog_note_detail.xml
+++ b/app/src/main/res/layout/dialog_note_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/dialog_background"
-    android:padding="20dp"
+    android:padding="10dp"
     tools:context=".dialog.NoteDetailDialog">
 
 
@@ -31,8 +31,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingBottom="20dp"
-        android:textSize="@dimen/medium_text_size"
         android:text="@string/note_detail_title_create" />
 
 
@@ -40,9 +38,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/noteDetailButtonLayout"
         app:layout_constraintTop_toBottomOf="@id/noteDetailTextInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <Button
@@ -71,8 +71,8 @@
         android:layout_height="wrap_content"
         style="@style/EditTextLayout"
         android:minWidth="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/noteDetailTitle"
+        app:layout_constraintBottom_toTopOf="@id/noteDetailButtonLayout"
         app:counterEnabled="true"
         app:counterMaxLength="250"
         >
