--- a/app/src/main/res/layout/dialog_confirm_remove.xml
+++ b/app/src/main/res/layout/dialog_confirm_remove.xml
@@ -28,7 +28,9 @@ android:padding="15dp"
     android:layout_height="2dp"
     android:background="?attr/colorPrimaryVariant"
     app:layout_constraintTop_toBottomOf="@id/confirmRemoveDialogTitle"
+    app:layout_constraintBottom_toTopOf="@id/confirmRemoveButtonLayout"
     android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     />
 
 
