--- a/app/src/main/res/layout/join_home_recycler_row.xml
+++ b/app/src/main/res/layout/join_home_recycler_row.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/joinHomeSentByText"
                 android:text="@string/home_name_placeholder" />
 
             <TextView
@@ -31,6 +32,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/joinHomeHomeName"
+                app:layout_constraintEnd_toStartOf="@id/joinHomeSentByName"
                 android:text="@string/join_home_sent_by_text" />
 
             <TextView
@@ -39,30 +42,32 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/joinHomeSentByText"
                 android:layout_marginStart="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="@id/joinHomeSentByText"
+                app:layout_constraintBottom_toBottomOf="@id/joinHomeSentByText"
                 android:text="@string/join_home_sent_by_name" />
 
             <ImageButton
                 android:id="@+id/joinHomeAcceptButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/checkbox_on_background"
-                android:minWidth="50dp"
-                android:minHeight="50dp"
+                android:src="@drawable/baseline_check_24"
+                android:minWidth="30dp"
+                android:minHeight="30dp"
                 app:layout_constraintEnd_toStartOf="@id/joinHomeDeclineInvite"
-                app:layout_constraintStart_toEndOf="@id/joinHomeSentByName"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:contentDescription="@string/join_home_accept_invite_desc"
+                android:layout_marginEnd="20dp"
                 />
 
             <ImageButton
                 android:id="@+id/joinHomeDeclineInvite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/btn_dialog"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
+                android:src="@drawable/baseline_close_24"
+                android:minWidth="30dp"
+                android:minHeight="30dp"
+                android:backgroundTint="@android:color/holo_red_light"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
