--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -59,7 +59,7 @@
                 android:layout_width="@dimen/large_text_size"
                 android:layout_height="@dimen/large_text_size"
                 android:contentDescription="@string/add_members_button"
-                android:backgroundTint="@color/ivory"
+                style="?attr/imageButtonStyle"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
