--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,12 +38,13 @@
     </style>
 
     <style name="ChoreyButton" parent="Widget.AppCompat.Button">
-        <item name="backgroundTint">?attr/colorSecondary</item>
+        <item name="backgroundTint">@color/ivory</item>
 
     </style>
 
     <style name="ChoreyButtonIcon">
         <item name="android:background">@drawable/button_round</item>
+        <item name="backgroundTint">@color/ivory</item>
     </style>
 
     <!-- Bar buttons -->
