--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,11 +44,10 @@
             android:id="@+id/homeToMenuButton"
             android:layout_width="@dimen/large_text_size"
             android:layout_height="@dimen/large_text_size"
+            style="?attr/imageButtonStyle"
             android:contentDescription="@string/home_item_place_holder"
             android:src="@drawable/baseline_arrow_back_24"
-            android:color="@android:color/holo_red_light"
-            android:background="@drawable/button_round"
-            android:backgroundTint="@android:color/transparent"
+            android:background="@android:color/transparent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +73,7 @@
             android:layout_width="@dimen/large_text_size"
             android:layout_height="@dimen/large_text_size"
             android:contentDescription="@string/add_members_button"
-            android:backgroundTint="@android:color/transparent"
+            android:background="@android:color/transparent"
             android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -107,6 +106,7 @@
         android:layout_height="wrap_content"
         android:text="@string/home_no_chores_left"
         android:textSize="@dimen/medium_text_size"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/homeRecyclerTitle"
