--- a/app/src/main/res/layout/join_home_recycler_row.xml
+++ b/app/src/main/res/layout/join_home_recycler_row.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/joinHomeHomeName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/joinHomeSentByText"
@@ -30,6 +31,7 @@
                 android:id="@+id/joinHomeSentByText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/joinHomeHomeName"
@@ -40,6 +42,7 @@
                 android:id="@+id/joinHomeSentByName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintStart_toEndOf="@id/joinHomeSentByText"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/joinHomeSentByText"
