--- a/app/src/main/res/layout/chore_spinner_item.xml
+++ b/app/src/main/res/layout/chore_spinner_item.xml
@@ -2,6 +2,7 @@
     android:id="@android:id/text1"
     android:maxLines="1"
     android:padding="5dp"
+    android:textColor="?attr/colorOnPrimary"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ellipsize="marquee" />
