--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,6 @@
     <style name="CardStyle" parent="Widget.MaterialComponents.CardView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:elevation">10dp</item>
         <item name="cardCornerRadius">15dp</item>
         <item name="android:padding">0dp</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
@@ -44,7 +43,7 @@
 
     <style name="ChoreyButtonIcon">
         <item name="android:background">@drawable/button_round</item>
-        <item name="backgroundTint">@color/ivory</item>
+        <item name="android:backgroundTint">@color/ivory</item>
     </style>
 
     <!-- Bar buttons -->
