--- a/app/src/main/res/layout/dialog_join_home.xml
+++ b/app/src/main/res/layout/dialog_join_home.xml
@@ -25,6 +25,18 @@
         />
 
 
+    <TextView
+        android:id="@+id/askForInviteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/joinHomeTitle"
+        app:layout_constraintBottom_toTopOf="@id/joinHomeDismissButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="?attr/colorOnPrimary"
+        android:layout_margin="20dp"
+        android:text="@string/join_home_ask_for_invite" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/joinHomeRecycler"
         style="?attr/recyclerViewStyle"
