--- a/app/src/main/res/layout/home_recycler_row.xml
+++ b/app/src/main/res/layout/home_recycler_row.xml
@@ -7,6 +7,7 @@
 
     <com.google.android.material.card.MaterialCardView
         style="?attr/cardViewStyle"
+        android:id="@+id/choreRecyclerCard"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
