--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -72,7 +72,7 @@
         android:id="@+id/menuEmptyRecyclerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/medium_text_size"
+        android:textSize="@dimen/large_text_size"
         android:textStyle="bold"
         android:text="@string/menu_text_empty_recycler"
         app:layout_constraintTop_toBottomOf="@id/menuTitleLayout"
@@ -142,7 +142,7 @@
             app:layout_constraintEnd_toEndOf="@id/menuArrow"
             android:textSize="@dimen/medium_text_size"
             android:textStyle="bold"
-            android:layout_marginEnd="50dp"
+            android:layout_marginEnd="70dp"
             android:text="@string/add_home_hint" />
 
         <ImageView
