--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
         android:text="@string/home_all_chores_text"
         app:layout_constraintTop_toBottomOf="@id/homeFragmentTopLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
@@ -100,7 +100,39 @@
         />
 
 
-    <TextView
+        <TextView
+            android:id="@+id/activeChoresButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginStart="30dp"
+            app:layout_constraintStart_toEndOf="@id/homeRecyclerTitle"
+            app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
+            app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
+            app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
+            android:textColor="@color/primaryColor"
+            android:text="@string/home_active_chores_button"
+            />
+
+        <TextView
+            android:id="@+id/historyChoresButton"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/activeChoresButton"
+            app:layout_constraintTop_toTopOf="@id/homeRecyclerTitle"
+            app:layout_constraintBottom_toTopOf="@id/allChoresRecycler"
+            android:textColor="@color/primaryColor"
+            android:text="@string/home_history_chores_button"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+
+        <TextView
         android:id="@+id/noChoresLeftText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
